[package]
name = "fefe"
version = "0.1.0"
authors = ["thiolliere <gui.thiolliere@gmail.com>"]

[dependencies]
specs = "0.10"
rand = "0.4"
ron = "0.2"
serde_derive = "1.0"
serde = "1.0"
failure = "0.1"
lyon = { version = "0.10", features = ["svg"] }
lazy_static = "1"
gilrs = "0.6"
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = "0.15"
ncollide2d = "0.15"
nphysics2d = "0.8"
nalgebra = "0.14"
alga = "0.5"
pathfinding = "0.7"
png = "0.12"
fps_counter = "1"
app_dirs2 = "2"
rodio = "0.7"
derive_deref = "1"
rusttype = { version = "0.6", features = ["gpu_cache"] }
itertools = "0.7"
fnv = "1"
imgui = "0.0.18"

[replace]
"vulkano-win:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano-shader-derive:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
